hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0001.hl
java.lang.System.out.println("Hello")